# deceptive-metadata-shredder

./: .gitignore  DMS_Portable.spec  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml
hooks/: hook-PySide6.py
scripts/: build.ps1  build_exe.sh  build_installer.bat  convert_icon.py  installer.iss
src/dms/: __init__.py  config.py
src/dms/core/: __init__.py  analyzer.py  constants.py  device_db.py  error_messages.py  exiftool_tags.py  geo_validator.py  models.py  sanitizer.py  spoofer.py  utils.py
src/dms/data/: devices.json
src/dms/interfaces/: __init__.py  cli.py  watcher.py
src/dms/interfaces/gui/: __init__.py  app.py  theme.py
src/dms/interfaces/gui/screens/: __init__.py  screen_batch.py  screen_compare.py  screen_drop.py  screen_report.py
src/dms/interfaces/gui/widgets/: __init__.py  glass_card.py  map_widget.py  meta_table.py  spoof_editor.py  tag_badge.py  toast.py
tests/: test_analyzer.py  test_batch.py  test_exiftool_tags.py  test_geo_validator.py  test_sanitizer.py  test_session.py  test_spoofer.py  test_watch_cli.py  test_watcher.py
tests/fixtures/: test_document.docx  test_with_metadata.tiff
